Refactored Main to be a class called TerminalUI, it no longer imports server.

--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -44,7 +44,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        Main
+                                        TerminalUI
                                     </mainClass>
                                 </manifest>
                             </archive>
