Fixed bug that made the console print out 'Unrecognized Command' when a logged in user tried to quit

--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -44,7 +44,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        TerminalUI
+                                        facade.TerminalUI
                                     </mainClass>
                                 </manifest>
                             </archive>
