--- a/client/pom.xml
+++ b/client/pom.xml
@@ -21,7 +21,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.1</version>
                 <configuration>
-                    <mainClass>TerminalUI</mainClass>
+                    <mainClass>facade.TerminalUI</mainClass>
                 </configuration>
             </plugin>
             <plugin>
@@ -38,7 +38,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        TerminalUI
+                                        facade.TerminalUI
                                     </mainClass>
                                 </manifest>
                             </archive>
