--- a/server/pom.xml
+++ b/server/pom.xml
@@ -26,7 +26,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.1</version>
                 <configuration>
-                    <mainClass>TerminalUI</mainClass>
+                    <mainClass>facade.TerminalUI</mainClass>
                 </configuration>
             </plugin>
             <plugin>
@@ -43,7 +43,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        TerminalUI
+                                        facade.TerminalUI
                                     </mainClass>
                                 </manifest>
                             </archive>
